--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <app-dashboard></app-dashboard>
 <div style="height: 10px"></div>
 
-<div style="margin-left: 2%;margin-right: 2%;width: auto;">
+<div style="margin-left: 1vw;margin-right: 1vw;width: auto;">
   <router-outlet></router-outlet>
 </div>
 
@@ -13,3 +13,6 @@
 
 <app-errorbox></app-errorbox>
 
+<!--<div>-->
+  <!--kaki sdh dksaéd lékédlkadé ékaé da a séakséak s ékasékaé ksékas éaksé éakséaké askaékséakséa kaki-->
+<!--</div>-->
