--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -6,7 +6,7 @@
     <ng-container *ngIf="!bizonylatLeiro.GenBizonylatszam">
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Bizonylatszám</div>
+          <div class="editform-label">Bizonylatszám</div>
           <input type="text" class="form-control form-control-sm oszlop3" id="bizonylatszam"
                  maxlength="20" required autocomplete="off"
                  [(ngModel)]="bizonylatszam" name="bizonylatszam">
