--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -29,7 +29,7 @@
 
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Pénztár</div>
+          <div class="editform-label">Pénztár</div>
           <input type="text" class="form-control form-control-sm oszlop3" id="penztar"
                  readonly="true"
                  [(ngModel)]="penztarDto[penztarindex].Penztar1" name="penztar">
@@ -38,7 +38,7 @@
 
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Pénznem</div>
+          <div class="editform-label">Pénznem</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
                  readonly="true"
                  [(ngModel)]="penztarDto[penztarindex].Penznem" name="penznem">
@@ -47,7 +47,7 @@
 
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Egyenleg</div>
+          <div class="editform-label">Egyenleg</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="egyenleg"
                  readonly="true"
                  [(ngModel)]="penztarDto[penztarindex].Egyenleg" name="egyenleg">
@@ -56,7 +56,7 @@
 
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Összeg</div>
+          <div class="editform-label">Összeg</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="osszeg"
                  readonly="true"
                  [(ngModel)]="Dto.Brutto" name="osszeg">
@@ -65,7 +65,7 @@
 
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Megjegyzés</div>
+          <div class="editform-label">Megjegyzés</div>
           <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                  autocomplete="off"
                  [(ngModel)]="megjegyzes" name="megjegyzes">
