--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       <div class="db_mezo">
         {{screenWidth}} x {{screenHeight}}
       </div>
-      <table class="table table-bordered table-sm table-responsive" style="border: none; margin-left: 14px; margin-top: 20px; padding-bottom: 20px">
+      <table class="table table-bordered table-sm table-responsive" style="border: none; margin-top: 20px; padding-bottom: 20px">
         <thead>
           <tr>
             <th>Időpont</th><th>Üzenet</th>
