--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -11,7 +11,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Megjegyzés</div>
+        <div class="editform-label">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="megjegyzes" name="megjegyzes">
