--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">A számlák kelte</div>
+        <div class="editform-label">A számlák kelte</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="szktol"
                [(ngModel)]="szktol" name="szktol" style="display: inline-block;margin-right: 4px">
       </div>
@@ -24,7 +24,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">A számlák száma</div>
+        <div class="editform-label">A számlák száma</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="szsztol"
                [(ngModel)]="szsztol" name="szsztol" style="display: inline-block;margin-right: 4px">
       </div>
