--- a/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
+++ b/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
@@ -5,21 +5,21 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Bizonylatkép iratkód</div>
+          <div class="editform-label">Bizonylatkép iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
       </div>
 
       <div class="editform-row">
-          <div class="egylabel">Eredeti példány</div>
+          <div class="editform-label">Eredeti példány</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
       </div>
 
       <div class="editform-row">
-          <div class="egylabel">Másolatok</div>
+          <div class="editform-label">Másolatok</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
