--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -5,25 +5,25 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Név</div>
+        <div class="editform-label">Név</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m1"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Nev" name="m1">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Irányítószám</div>
+        <div class="editform-label">Irányítószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off" maxlength="10"
                [(ngModel)]="cSzallito.Iranyitoszam" name="m2">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Helységnév</div>
+        <div class="editform-label">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m3"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Helysegnev" name="m3">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Utca, házszám</div>
+        <div class="editform-label">Utca, házszám</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m4"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Utcahazszam" name="m4">
@@ -32,13 +32,13 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Bankszámla 1</div>
+        <div class="editform-label">Bankszámla 1</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m5"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla1" name="m5">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Bankszámla 2</div>
+        <div class="editform-label">Bankszámla 2</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m6"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla2" name="m6">
@@ -47,19 +47,19 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Adó törzsszám</div>
+        <div class="editform-label">Adó törzsszám</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="m7"
                autocomplete="off" maxlength="8"
                [(ngModel)]="cSzallito.Adotorzsszam" name="m7">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Adó áfakód</div>
+        <div class="editform-label">Adó áfakód</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m8"
                autocomplete="off" maxlength="1"
                [(ngModel)]="cSzallito.Adoafakod" name="m8">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Adó megyekód</div>
+        <div class="editform-label">Adó megyekód</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m9"
                autocomplete="off" maxlength="2"
                [(ngModel)]="cSzallito.Adomegyekod" name="m9">
