--- a/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
+++ b/src/app/particio/particio-projektiratminta/particio-projektiratminta.component.html
@@ -4,7 +4,7 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Ajánlat iratkód</div>
+          <div class="editform-label">Ajánlat iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.AjanlatIratkod" name="m1">
@@ -13,31 +13,31 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Szerződés iratkód</div>
+          <div class="editform-label">Szerződés iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m8"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.SzerzodesIratkod" name="m8">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Szállítási szerződés iratkód</div>
+          <div class="editform-label">Szállítási szerződés iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m7"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.SzallitasiSzerzodesIratkod" name="m7">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Feltételes szerződés iratkód</div>
+          <div class="editform-label">Feltételes szerződés iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m9"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.FeltetelesSzerzodesIratkod" name="m9">
       </div>
       <div class="editform-row">
-          <div class="egylabel">OFT szerződés iratkód</div>
+          <div class="editform-label">OFT szerződés iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m10"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.OFTSzerzodesIratkod" name="m10">
       </div>
       <div class="editform-row">
-          <div class="egylabel">HMKE tulajdonos hozzájárulás iratkód</div>
+          <div class="editform-label">HMKE tulajdonos hozzájárulás iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m11"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.HMKEtulajdonoshozzajarulasIratkod" name="m11">
@@ -46,13 +46,13 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Munkalap iratkód</div>
+          <div class="editform-label">Munkalap iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m6"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.MunkalapIratkod" name="m6">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Elégedettségi felmérés iratkód</div>
+          <div class="editform-label">Elégedettségi felmérés iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.ElegedettsegiFelmeresIratkod" name="m2">
@@ -61,31 +61,31 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
+          <div class="editform-label">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m4"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.KeszrejelentesElmuemaszIratkod" name="m4">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Készrejelentés E.ON iratkód</div>
+          <div class="editform-label">Készrejelentés E.ON iratkód</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="m5"
                  autocomplete="off"
                  [(ngModel)]="cProjekt.KeszrejelentesEonIratkod" name="m5">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Készrejelentés MVM iratkód</div>
+        <div class="editform-label">Készrejelentés MVM iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesMvmIratkod" name="m3">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Készrejelentés EON/ELMÜ iratkód</div>
+        <div class="editform-label">Készrejelentés EON/ELMÜ iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m31"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesEonelmuIratkod" name="m31">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Készrejelentés MVM/ÉMÁSZ iratkód</div>
+        <div class="editform-label">Készrejelentés MVM/ÉMÁSZ iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m32"
                autocomplete="off"
                [(ngModel)]="cProjekt.KeszrejelentesMvmemaszIratkod" name="m32">
