--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -5,14 +5,14 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">Új volume max. méret</div>
+          <div class="editform-label">Új volume max. méret</div>
           <input type="number" class="form-control form-control-sm oszlop3" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
       </div>
 
       <div class="editform-row">
-          <div class="egylabel">Új volume elérési út</div>
+          <div class="editform-label">Új volume elérési út</div>
           <input type="text" class="form-control form-control-sm oszlop6" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
