--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Dátumtól</div>
+        <div class="editform-label">Dátumtól</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="tol"
                [(ngModel)]="tol" name="tol">
       </div>
@@ -13,7 +13,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Dátumig</div>
+        <div class="editform-label">Dátumig</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="ig"
                [(ngModel)]="ig" name="ig">
       </div>
