--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Pénztár</div>
+        <div class="editform-label">Pénztár</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="penztar"
                maxlength="200" required autocomplete="off"
                [(ngModel)]="DtoEdited.Penztar1" name="penztar">
@@ -15,7 +15,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Pénznem</div>
+        <div class="editform-label">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Penznem" name="penznem">
