--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -6,13 +6,13 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">ÁFA kulcs</div>
+        <div class="editform-label">ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Afakulcs1" name="afakulcs">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Az ÁFA mértéke, %</div>
+        <div class="editform-label">Az ÁFA mértéke, %</div>
         <input type="number" class="form-control form-control-sm oszlop1" id="egysegar"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
