--- a/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
@@ -5,14 +5,14 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Jelszó</div>
+        <div class="editform-label">Jelszó</div>
         <input type="password" class="form-control form-control-sm" id="jelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszo" name="jelszo">
       </div>
 
       <div class="editform-row">
-        <div class="egylabel">Jelszó újra</div>
+        <div class="editform-label">Jelszó újra</div>
         <input type="password" class="form-control form-control-sm" id="jelszoujra"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszoujra" name="jelszoujra">
