--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -6,25 +6,25 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Azonosító</div>
+        <div class="editform-label">Azonosító</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="azonosito"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Azonosito" name="azonosito">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Név</div>
+        <div class="editform-label">Név</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="nev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Nev" name="nev">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Telefon</div>
+        <div class="editform-label">Telefon</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="telefon"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Telefon" name="telefon">
       </div>
       <div class="editform-row">
-        <div class="egylabel">Email</div>
+        <div class="editform-label">Email</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="email"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Email" name="email">
@@ -33,7 +33,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Státusz</div>
+        <div class="editform-label">Státusz</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="DtoEdited.Statusz" name="statusz">
           <option>OK</option>
@@ -41,7 +41,7 @@
         </select>
       </div>
       <div class="editform-row">
-        <div class="egylabel">Log</div>
+        <div class="editform-label">Log</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
