--- a/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Fizetési mód</div>
+        <div class="editform-label">Fizetési mód</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="irattipus1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Fizetesimod1" name="irattipus1">
