--- a/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Helységnév</div>
+        <div class="editform-label">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="helysegnev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
