--- a/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Mennyiségi egység</div>
+        <div class="editform-label">Mennyiségi egység</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="irattipus1"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Me" name="irattipus1">
