--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -6,19 +6,19 @@
 
     <div class="editform-box">
       <div class="editform-row">
-          <div class="egylabel">KT</div>
+          <div class="editform-label">KT</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="kt"
                  maxlength="30" required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijkt" name="kt">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Megnevezés</div>
+          <div class="editform-label">Megnevezés</div>
           <input type="text" class="form-control form-control-sm oszlop4" id="megnevezes"
                  maxlength="50" required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="megnevezes">
       </div>
       <div class="editform-row">
-          <div class="egylabel">Egységár</div>
+          <div class="editform-label">Egységár</div>
           <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                  required autocomplete="off"
                  [(ngModel)]="DtoEdited.Termekdijegysegar" name="egysegar">
