--- a/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
+++ b/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Tevékenység</div>
+        <div class="editform-label">Tevékenység</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="kt"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Tevekenyseg1" name="kt">
