--- a/src/app/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt-export/projekt-export.component.html
@@ -4,7 +4,7 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="egylabel">{{projektcsoport}}</div>
+      <div class="editform-label">{{projektcsoport}}</div>
     </div>
 
     <div class="row no-gutters editform-row">
