--- a/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Ügyfél</div>
+        <div class="editform-label">Ügyfél</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="ugyfelnev"
                maxlength="200" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Ugyfelnev" name="ugyfelnev">
@@ -24,7 +24,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Telepítési cím</div>
+        <div class="editform-label">Telepítési cím</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="telepitesicim"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Telepitesicim" name="telepitesicim">
@@ -33,7 +33,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">A projekt jellege</div>
+        <div class="editform-label">A projekt jellege</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="projektjellege"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Projektjellege" name="projektjellege">
@@ -42,14 +42,14 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Vállalási ár</div>
+        <div class="editform-label">Vállalási ár</div>
         <input type="number" class="form-control form-control-sm oszlop3" id="kuldo"
                required
                [(ngModel)]="DtoEdited.Vallalasiarnetto" name="kuldo">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Pénznem</div>
+        <div class="editform-label">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
                maxlength="30" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Penznem" name="penznem">
@@ -59,7 +59,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Megjegyzés</div>
+        <div class="editform-label">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
