--- a/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
+++ b/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Leírás</div>
+        <div class="editform-label">Leírás</div>
         <input type="text" class="form-control form-control-sm oszlop10" id="leiras"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Leiras" name="leiras">
