--- a/src/app/riport/bejovoszamla/bejovoszamla.component.html
+++ b/src/app/riport/bejovoszamla/bejovoszamla.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">A teljesítés kelte</div>
+        <div class="editform-label">A teljesítés kelte</div>
         <input type="date" class="form-control form-control-sm" id="tol"
                [(ngModel)]="tol" name="tol">
       </div>
