--- a/src/app/riport/beszerzes/beszerzes.component.html
+++ b/src/app/riport/beszerzes/beszerzes.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">A teljesítés kelte</div>
+        <div class="editform-label">A teljesítés kelte</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="tol"
                [(ngModel)]="tol" name="tol">
       </div>
@@ -20,7 +20,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Részletek is</div>
+        <div class="editform-label">Részletek is</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="reszletekis" name="reszletekis">
           <option value="false">Nem</option>
