--- a/src/app/riport/keszlet/keszlet.component.html
+++ b/src/app/riport/keszlet/keszlet.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Időpontig</div>
+        <div class="editform-label">Időpontig</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="datum"
                [(ngModel)]="datum" name="datum">
       </div>
