--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -6,14 +6,14 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Összeg</div>
+        <div class="editform-label">Összeg</div>
         <input type="number" class="form-control form-control-sm oszlop3" id="osszeg"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Osszeg" name="osszeg">
       </div>
 
       <div>
-        <div class="egylabel">Pénznem</div>
+        <div class="editform-label">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
                maxlength="3" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Penznem" name="penznem">
@@ -23,7 +23,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Megjegyzés</div>
+        <div class="editform-label">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
