--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Csoport</div>
+        <div class="editform-label">Csoport</div>
         <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
                  [checked]="i === selected" (change)="change(i)">
