--- a/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
+++ b/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
@@ -3,27 +3,27 @@
   <table class="table ng table-bordered table-sm table-responsive" style="border: none">
     <tbody>
     <tr>
-      <td class="egylabel">Név:</td>
+      <td class="editform-label">Név:</td>
       <td>{{Dto.Nev}}</td>
     </tr>
     <tr>
-      <td class="egylabel">Cég:</td>
+      <td class="editform-label">Cég:</td>
       <td>{{Dto.Ceg}}</td>
     </tr>
     <tr>
-      <td class="egylabel">Beosztás:</td>
+      <td class="editform-label">Beosztás:</td>
       <td>{{Dto.Beosztas}}</td>
     </tr>
     <tr>
-      <td class="egylabel">Cím:</td>
+      <td class="editform-label">Cím:</td>
       <td>{{Dto.Iranyitoszam}} {{Dto.Helysegnev}}, {{Dto.Kozterulet}} {{Dto.Kozterulettipus}} {{Dto.Hazszam}}</td>
     </tr>
     <tr>
-      <td class="egylabel">Telefon:</td>
+      <td class="editform-label">Telefon:</td>
       <td>{{Dto.Telefon}}</td>
     </tr>
     <tr>
-      <td class="egylabel">Email:</td>
+      <td class="editform-label">Email:</td>
       <td>{{Dto.Email}}</td>
     </tr>
     </tbody>
