--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -3,7 +3,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Érvényes</div>
+        <div class="editform-label">Érvényes</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="ervenyes"
                [(ngModel)]="AjanlatErvenyes" name="ervenyes">
       </div>
@@ -11,21 +11,21 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Szüks. áramerősség</div>
+        <div class="editform-label">Szüks. áramerősség</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="szuksaram"
                maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
                [(ngModel)]="AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
 
       <div>
-        <div class="egylabel">Tájolás</div>
+        <div class="editform-label">Tájolás</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="tajolas"
                maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
                [(ngModel)]="AjanlatParam.Tajolas" name="tajolas">
       </div>
 
       <div>
-        <div class="egylabel">Termelés</div>
+        <div class="editform-label">Termelés</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="termeles"
                required style="display: inline-block;margin-right: 3px"
                [(ngModel)]="AjanlatParam.Termeles" name="termeles">
@@ -34,7 +34,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Megjegyzés (tárgy)</div>
+        <div class="editform-label">Megjegyzés (tárgy)</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                maxlength="200" autocomplete="off"
                [(ngModel)]="AjanlatParam.Megjegyzes" name="megjegyzes">
