--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -5,7 +5,7 @@
     <ng-container *ngIf="!kesz">
       <div class="row no-gutters editform-row">
         <div>
-          <div class="egylabel">Új bizonylattipus</div>
+          <div class="editform-label">Új bizonylattipus</div>
           <div *ngFor="let entry of entries; let i = index" class="form-check">
             <input class="form-check-input" type="radio" name="radiogroup" id="entry"
                    [checked]="i === entryindex"
