--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Megnevezés</div>
+        <div class="editform-label">Megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megnevezes"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Megnevezes" name="megnevezes">
@@ -15,7 +15,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Me</div>
+        <div class="editform-label">Me</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="me"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Me" name="me">
@@ -23,7 +23,7 @@
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">ÁFA kulcs</div>
+        <div class="editform-label">ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Afakulcs" name="afakulcs">
@@ -33,21 +33,21 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Egységár</div>
+        <div class="editform-label">Egységár</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Egysegar" name="egysegar">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Tömeg, kg</div>
+        <div class="editform-label">Tömeg, kg</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="tomeg"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Tomegkg" name="tomeg">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Készletet képez</div>
+        <div class="editform-label">Készletet képez</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="DtoEdited.Keszletetkepez" name="kk">
           <option value="false">Nem</option>
@@ -58,7 +58,7 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Termékdíj KT</div>
+        <div class="editform-label">Termékdíj KT</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="termekdijkt"
                maxlength="10" autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Termekdijkt" name="termekdijkt">
@@ -66,14 +66,14 @@
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Termékdíj megnevezés</div>
+        <div class="editform-label">Termékdíj megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="termekdijmegnevezes"
                autocomplete="off" readonly
                [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Termékdíj egységár</div>
+        <div class="editform-label">Termékdíj egységár</div>
         <input type="number" class="form-control form-control-sm oszlop1" id="termekdijegysegar"
                autocomplete="off" readonly
                [(ngModel)]="DtoEdited.Termekdijegysegar" name="termekdijegysegar">
