--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Csoport</div>
+        <div class="editform-label">Csoport</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="csoport1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
