--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Irattipus</div>
+        <div class="editform-label">Irattipus</div>
         <input type="text" class="form-control form-control-sm oszlop5" id="irattipus1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
