--- a/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-box">
       <div class="editform-row">
-        <div class="egylabel">Pénznem</div>
+        <div class="editform-label">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="irattipus1"
                maxlength="3" required autocomplete="off"
                [(ngModel)]="DtoEdited.Penznem1" name="irattipus1">
