--- a/src/app/projekt/projekt-datumok/projekt-datumok.component.html
+++ b/src/app/projekt/projekt-datumok/projekt-datumok.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Keletkezett</div>
+        <div class="editform-label">Keletkezett</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
       </div>
@@ -14,7 +14,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Megrendelve</div>
+        <div class="editform-label">Megrendelve</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="megrendelve"
                [(ngModel)]="Megrendelve" name="megrendelve">
       </div>
@@ -22,7 +22,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Kivitelezési határidő</div>
+        <div class="editform-label">Kivitelezési határidő</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="kivhat"
                [(ngModel)]="KivHat" name="kivhat">
       </div>
