--- a/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
+++ b/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
@@ -5,7 +5,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Műszaki állapot</div>
+        <div class="editform-label">Műszaki állapot</div>
         <div *ngFor="let entry of entries" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
                  [checked]="entry === selected" (change)="change(entry)">
