--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Név</div>
+        <div class="editform-label">Név</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="nev"
                maxlength="200" required autocomplete="off"
                [(ngModel)]="DtoEdited.Nev" name="nev">
@@ -15,14 +15,14 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Ir. szám</div>
+        <div class="editform-label">Ir. szám</div>
         <input type="text" class="form-control form-control-sm oszlop1" id="iranyitoszam"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="DtoEdited.Iranyitoszam" name="iranyitoszam">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Helységnév</div>
+        <div class="editform-label">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="helysegnev"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
@@ -30,21 +30,21 @@
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Közterület</div>
+        <div class="editform-label">Közterület</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="kozterulet"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Kozterulet" name="kozterulet">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Közterület tipus</div>
+        <div class="editform-label">Közterület tipus</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="kozterulettipus"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="DtoEdited.Kozterulettipus" name="kozterulettipus">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Házszám</div>
+        <div class="editform-label">Házszám</div>
         <input type="text" class="form-control form-control-sm oszlop1" id="hazszam"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Hazszam" name="hazszam">
@@ -53,14 +53,14 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Telefon</div>
+        <div class="editform-label">Telefon</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="telefon"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="DtoEdited.Telefon" name="telefon">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Email</div>
+        <div class="editform-label">Email</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="email"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Email" name="email">
@@ -69,21 +69,21 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Cég</div>
+        <div class="editform-label">Cég</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="ceg"
                maxlength="200" autocomplete="off"
                [(ngModel)]="DtoEdited.Ceg" name="ceg">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Beosztás</div>
+        <div class="editform-label">Beosztás</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="beosztas"
                maxlength="200" autocomplete="off"
                [(ngModel)]="DtoEdited.Beosztas" name="beosztas">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Tevékenység</div>
+        <div class="editform-label">Tevékenység</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="tevekenyseg"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Tevekenyseg" name="tevekenyseg">
@@ -93,14 +93,14 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Adószám</div>
+        <div class="editform-label">Adószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" style="display: inline-block" id="adoszam"
                maxlength="20" autocomplete="off"
                [(ngModel)]="DtoEdited.Adoszam" name="adoszam">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">EU adószám</div>
+        <div class="editform-label">EU adószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="euadoszam"
                maxlength="20" autocomplete="off"
                [(ngModel)]="DtoEdited.Euadoszam" name="euadoszam">
@@ -109,14 +109,14 @@
 
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
-        <div class="egylabel">Egyéb link</div>
+        <div class="editform-label">Egyéb link</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="egyeblink"
                maxlength="200" autocomplete="off"
                [(ngModel)]="DtoEdited.Egyeblink" name="egyeblink">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
-        <div class="egylabel">Ajánlotta</div>
+        <div class="editform-label">Ajánlotta</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="ajanlotta"
                maxlength="200" autocomplete="off"
                [(ngModel)]="DtoEdited.Ajanlotta" name="ajanlotta">
@@ -125,7 +125,7 @@
 
     <div class="row no-gutters editform-row">
       <div>
-        <div class="egylabel">Megjegyzés</div>
+        <div class="editform-label">Megjegyzés</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                maxlength="200" autocomplete="off"
                [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
